--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
-    <div class="row">
+  <div class="container"></div>
+    <!-- <div class="row">
       <div class="col-2 hour">8AM</div>
       <div class="col-8 description " id="t8">
         <input type="text" id="i8" class="textarea">
@@ -120,9 +120,9 @@
         <button class="delete" id="d17"><img class="icon" src="./assets/red-x-line.png" alt="delete"></button>
       </div>
     </div>
-  </div>
+</div>  -->
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src=./app.js ></script>
 </body>
